fix status cw button wrapping

--- a/web/source/css/status.css
+++ b/web/source/css/status.css
@@ -115,6 +115,7 @@ main {
 		display: inline-block;
 
 		.button {
+			white-space: nowrap;
 			padding: 0.2rem 0.3rem;
 			cursor: pointer;
 			font-size: 1rem;
